# ParkingCECAR_API_v2

./: .gitignore  LICENSE  Pipfile  Readme.md  conftest.py  current.txt  docker-compose.yml  env.template  pyproject.toml  requirements.txt  server.py
api/: models.py  settings.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_alter_detection_processing_time_ocr_and_more.py  0003_rename_crop_json_bin_detection_crop_json_base64_and_more.py  0004_alter_detection_crop_json_base64_and_more.py  0005_alter_detection_crop_json_base64_and_more.py  0006_alter_detection_crop_loc_alter_detection_pred_loc_and_more.py  0007_remove_detection_crop_json_base64_and_more.py  0008_alter_detection_time_stamp_creation.py  0009_remove_detection_time_stamp_creation_and_more.py  0010_detection_file_name.py  0011_alter_detection_time_stamp.py
backend/: dodo.py  dump.rdb  requirements.txt  schema.yml
backend/api/: admin.py  models.py  serializers.py  settings.py  tasks.py  tests.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_alter_detection_record_name.py  0002_detection_id_ref_alter_detection_id.py  0003_alter_detection_crop_loc_alter_detection_file_name_and_more.py
backend/api/views/: DetectionDetail.py  DetectionDetailFileName.py  DetectionDetailIdRef.py  (+7 more)
backend/core/: TaskFormatter.py  celery.py  celery_app.py  celery_utils.py  models.py  settings.py  urls.py  views.py
backend/detector_utils/: FileManagerUtil.py  base64_utils.py  colors.py  constants.py  detector_interface.py  file_system_utils.py  image_utils.py  inference_interface.py  license_detector.py  ocr_utils.py
backend/dummy_data/: detections_dummy_data.py
config_experimental_archive/: 231002_1609_requirements.txt  231002_1622_requirements.txt  231002_1624_requirements.txt  231010_1118_requirements  requirements_archive_v01.txt  requirements_archive_v02.txt
tests/: background_detection_test.py
(+17 files in other folders)
